# iis

./: .gitignore  README.md  data.dvc  pyproject.toml
models/: model.joblib
reports/: data_drift.html
src/data/: process_data.py
src/models/: train_eval.py
src/serve/: main.py
src/serve/routers/: prediction.py
src/validation/: data_drift.py  validate.py
